--- a/MoviePick.MobileUI/MoviePick.MobileUI/MoviePick.MobileUI.csproj
+++ b/MoviePick.MobileUI/MoviePick.MobileUI/MoviePick.MobileUI.csproj
@@ -33,5 +33,8 @@
     <EmbeddedResource Update="Views\PersonDetailsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\SeasonEpisodesPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
