Xamarin forms ::  Rating implemented, Episodes list for TV shows, bug fixes

--- a/MoviePick.MobileUI/MoviePick.MobileUI/MoviePick.MobileUI.csproj
+++ b/MoviePick.MobileUI/MoviePick.MobileUI/MoviePick.MobileUI.csproj
@@ -30,6 +30,12 @@
     <EmbeddedResource Update="Views\MTVSListPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\NewsDetailsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\NewsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\PersonDetailsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
