Xamarin :: MovieChat, Login | Windows forms :: Validation bug fix

--- a/MoviePick.MobileUI/MoviePick.MobileUI/MoviePick.MobileUI.csproj
+++ b/MoviePick.MobileUI/MoviePick.MobileUI/MoviePick.MobileUI.csproj
@@ -24,6 +24,12 @@
     <EmbeddedResource Update="Views\FullCastPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\LoginPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\MovieChatPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\MTVSDetailsPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
