--- a/MoviePick/appsettings.json
+++ b/MoviePick/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "localDb": "Data Source=.;Initial Catalog=MoviePick; Integrated Security = true;"
+  },
   "AllowedHosts": "*"
 }
