--- a/MoviePick/appsettings.json
+++ b/MoviePick/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "localDb": "Data Source=.;Initial Catalog=MoviePick; Integrated Security = true;"
+    "localDb": "Data Source=.;Initial Catalog=MoviePick; Integrated Security = true;",
+    "MoviePick": "Data Source=.;Initial Catalog=170027; Integrated Security = true;"
   },
   "AllowedHosts": "*"
 }
