--- a/MoviePick.WindowsFormsUI/packages.config
+++ b/MoviePick.WindowsFormsUI/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="Flurl" version="2.8.2" targetFramework="net472" />
   <package id="Flurl.Http" version="2.4.2" targetFramework="net472" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1404.0" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
 </packages>
