--- a/MoviePick.MobileUI/MoviePick.MobileUI.UWP/MoviePick.MobileUI.UWP.csproj
+++ b/MoviePick.MobileUI/MoviePick.MobileUI.UWP/MoviePick.MobileUI.UWP.csproj
@@ -173,6 +173,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations">
+      <Version>4.7.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.9" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
