--- a/MoviePick/MoviePick.csproj
+++ b/MoviePick/MoviePick.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.4.0" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
