--- a/MoviePick/appsettings.json
+++ b/MoviePick/appsettings.json
@@ -7,8 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "localDb": "Data Source=.;Initial Catalog=MoviePick; Integrated Security = true;",
-    "MoviePick": "Data Source=.;Initial Catalog=170027; Integrated Security = true;"
+    "MoviePick": "Data Source=.;Initial Catalog=MoviePick; Integrated Security = true;"
   },
   "AllowedHosts": "*"
 }
